[project]
name = "bridge"
version = "0.1.0"
description = "Bridge — Local real-time voice-to-voice translation: Whisper + Ollama + Kokoro-82M"
requires-python = ">=3.12"

dependencies = [
    # ── Web Framework & Streaming Networking ───────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    
    # ── Speech-to-Text (STT) ───────────────────────────────────
    "faster-whisper>=1.0.3",
    
    # ── Core Math & Array I/O (Zero-Copy Processing) ───────────
    "numpy>=1.26.0",
    
    # ── Translation Async Layer ────────────────────────────────
    "httpx>=0.27.0",       # Lightweight non-blocking Ollama REST API calls
    
    # ── Text-to-Speech (TTS) ───────────────────────────────────
    "kokoro-onnx>=0.5.0",  # High-efficiency, low-VRAM static graph runtime
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# Windows-specific CUDA configuration alignment framework
# After initialization run sync, then resolve localized CUDA 12 runtimes via:
#   pip install ctranslate2 --force-reinstall --index-url https://download.pytorch.org/whl/cu121
index-url = "https://pypi.org/simple"