[project]
name = "bridge"
version = "0.2.0"
description = "Bridge — Local real-time voice-to-voice translation: Whisper + Ollama + Kokoro-82M"
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ──────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # ── STT ────────────────────────────────────────────────────
    "faster-whisper>=1.0.3",

    # ── Audio & data ───────────────────────────────────────────
    "numpy>=1.26.0",

    # ── Translation ────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── TTS ────────────────────────────────────────────────────
    # Covers EN, ES, FR, IT, JA, ZH (cmn), HI, PT
    # Korean, German, Telugu coming in a future release
    "kokoro-onnx>=0.5.0",

    # ── NVIDIA CUDA 12 runtimes ────────────────────────────────
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
index-url = "https://pypi.org/simple"

# ── Notes ──────────────────────────────────────────────────────────────────────
# After `uv pip install -r requirements.txt`, if CUDA is not detected for Whisper:
#   pip install ctranslate2 --force-reinstall --index-url https://download.pytorch.org/whl/cu121
#
# eSpeak NG is required for non-English TTS (FR, IT, JA, ZH, HI, PT).
# Install from: https://github.com/espeak-ng/espeak-ng/releases/latest
# The server sets the required environment variables automatically on startup.