[project]
name = "bridge"
version = "0.3.0"
description = "Bridge — Local real-time voice-to-voice translation with optional voice cloning playback"
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ──────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # ── STT ────────────────────────────────────────────────────
    "faster-whisper>=1.0.3",

    # ── Audio & data ───────────────────────────────────────────
    "numpy>=1.26.0",
    "soundfile>=0.12.1",   # fallback decoder for voice sample uploads

    # ── Translation ────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── TTS — preset voices ────────────────────────────────────
    # Kokoro covers EN, ES, FR, IT, JA, ZH (cmn), HI, PT
    "kokoro-onnx>=0.5.0",

    # Piper covers KO, DE — voice model files downloaded separately
    "piper-tts",

    # ── TTS — voice cloning (optional, ~2-3 GB VRAM) ───────────
    # Clones a short reference clip and uses it for playback across
    # 23 languages. Telugu is not supported by any current engine.
    "chatterbox-tts",
    "torchaudio",

    # ── NVIDIA CUDA 12 runtimes ────────────────────────────────
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
index-url = "https://pypi.org/simple"

# ── Notes ──────────────────────────────────────────────────────────────────────
# After `uv pip install -r requirements.txt`, if CUDA is not detected for Whisper:
#   pip install ctranslate2 --force-reinstall --index-url https://download.pytorch.org/whl/cu121
#
# eSpeak NG is required for non-English Kokoro TTS (FR, IT, JA, ZH, HI, PT).
# Install from: https://github.com/espeak-ng/espeak-ng/releases/latest
# The server sets the required environment variables automatically on startup.
#
# Piper voice files (Korean, German) must be downloaded manually into
# piper_voices/ — see DOCUMENTATION.md.
#
# Chatterbox-tts requires PyTorch with CUDA support. If voice cloning loads
# on CPU instead of CUDA, verify your torch build matches your installed
# CUDA version.